--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <header class="container text-center">
         <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou Ana Luiza e estudo programação</h1> Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
+        <p class="lead">Eu sou Ana luiza de Oliveira_</p>
+        <h1>Eu estudo Programação</h1>
+        <p> Estudo pensamento computacional e estou cursando o 1º ano do Ensino
+            Médio Fundamental. Aprendo muito sobre pensamento computacional e estou utilizando HTML, CSS e JavaScript. Veja os projetos
             que já desenvolvi!</p>
         <p>Minhas habilidades</p>
         <div>
